2007-03-05 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* (Merged from TRY-jfasch-relocated-headers)
	  * new RELOCATE_HEADER() function
	  * "build" test suite for libconfix

2007-03-05 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* (argh) added libconfix.plugins.c.relocated_headers to setup.py
	* Release 2.0.0pre24	

2007-03-01 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* core.machinery.builder.Builder: new method force_enlarge() which
	  can be used to easily request another enlarge round. (people
	  used to add an artificial provide object for that purpose.)
	* plugins.c: removed GraphInstaller and DefaultInstaller. the
	  responsibility of the latter was moved back into
	  h.HeaderBuilder; the former has no replacement.
	* started to move tests from the toplevel 'tests' directory into
	  subdirectories (named 'tests') of the source to be tested.
	* Release 2.0.0pre23
 
2007-02-11 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* plugins.make.iface: new method CALL_MAKE_AND_RESCAN_SYNC()
	* plugins.c.compiled, plugins.c.linked: use
	  $(readonly_prefixes_incpath) and $(readonly_prefixes_libpath)
	  instead of the respective @readonly_prefixes_...@
	  AC_SUBSTitutions
	* Release 2.0.0pre22

2007-02-07 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* Bug fix: "[ 1654643 ] URGENCY_ERROR require need not be resolved
	  immediately"

2007-01-25 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* Bug fix in plugins.make.caller: ambiguous provide objects
	  generated.
	* Release 2.0.0pre21

2007-01-22 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* fix "[ 1639330 ] 'CALL_MAKE_AND_RESCAN' is not defined", plus
	  associated test.
	* Release 2.0.0pre20
	
2007-01-17 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* fix "[ 1620287 ] Cycle error: message output bug"

2007-01-17 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* Add tests (inmem and build) for explicit executable names